2003-11-07  Christopher Faylor  <cgf@redhat.com>

	* fhandler_disk_file.cc (fhandler_disk_file::opendir): Reorganize to
	handle freeing of memory on error condition.

2003-11-07  Christopher Faylor  <cgf@redhat.com>

	* cygthread.cc (cygthread::freerange): Set inuse count.  Avoid setting
	ev from h as h would be NULL at this point.
	(cygthread::operator new): Issue debugging info when overflowing the
	thread pool.
	(cygthread::cygthread): Set ev from h here after h has been initialized.

2003-11-06  Corinna Vinschen  <corinna@vinschen.de>

	* bsdlib.cc (_vwarnx): New function.
	(vwarn): Ditto.
	(vwarnx): Ditto.
	(warn): Ditto.
	(warnx): Ditto.
	(verr): Ditto.
	(verrx): Ditto.
	(err): Ditto.
	(errx): Ditto.
	* cygwin.din: Export above functions.
	* include/err.h: New file.
	* include/cygwin/version.h: Bump API minor number.

2003-11-06  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (getshmlba): New function.
	* external.cc (cygwin_internal): Add CW_GET_SHMLBA handling.
	* mmap.cc (mmap64): Call getshmlba to evaluate granularity.
	* winsup.h (getshmlba): Add declaration.
	* include/cygwin/version.h: Bump API minor number.
	* include/sys/cygwin.h (cygwin_getinfo_types): Add CW_GET_SHMLBA.

2003-11-06  Christopher Faylor  <cgf@redhat.com>

	* winsup.h: Declare access_worker.

2003-11-05  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/types.h: Fix preprocessor guards for vm_offset_t and
	vm_size_t.  Add typedef for vm_object_t.

2003-11-05  Christopher Faylor  <cgf@redhat.com>

	* fhandler_disk_file.cc (fhandler_disk_file::opendir): Detect attempt
	to open a directory which lacks read privileges.

2003-11-04  Corinna Vinschen  <corinna@vinschen.de>

	* external.cc (cygwin_internal): Add CW_GET_POSIX_SECURITY_ATTRIBUTE
	handling.
	* include/cygwin/version.h: Bump API minor number.
	* include/sys/cygwin.h (cygwin_getinfo_types): Add
	CW_GET_POSIX_SECURITY_ATTRIBUTE.

	* exceptions.cc (init_global_security): Move from here...