@@ -75,7 +75,9 @@ typedef enum
     CW_CHECK_NTSEC,
     CW_GET_ERRNO_FROM_WINERROR,
     CW_GET_POSIX_SECURITY_ATTRIBUTE,
-    CW_GET_SHMLBA
+    CW_GET_SHMLBA,
+    CW_GET_UID_FROM_SID,
+    CW_GET_GID_FROM_SID
   } cygwin_getinfo_types;
 
 #define CW_NEXTPID	0x80000000	/* or with pid to get next one */
